test/bad/automatic/base/compile_time/0041.lat
int main() {
    while(true) {
        int a;
    }
    return a;
}